Create Medicine Log Display

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.health_bud">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HealthBud"
         tools:targetApi="31">
+        <!-- Medicine Log Activity -->
+        <activity android:name=".MedicineLogActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
