Added food log activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
             android:exported="true" />
         <activity android:name=".Exercise"
             android:exported="true" />
+        <activity android:name=".FoodLogActivity"
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
